[tool.poetry]
name = "pypulsar"
version = "0.0.1"
description = "A Python Package to interact with Pulsar Cluster. This implments the features which are missing in the official python client for pulsar."
authors = ["Keenborder786"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
requests = ">=2.28.2"
pandas = ">=1.5.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1"
autopep8 = ">=2.0.1"
black = ">=23.1.0"
isort = ">=5.12.0"
autoflake = ">=2.0.1"
pydocstringformatter = ">=0.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
